adding more examples

--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,10 @@ test {
     useJUnitPlatform()
 }
 
+tasks.withType(Javadoc) {
+	options.addStringOption('Xdoclint:none', '-quiet')
+	options.addStringOption('encoding', 'UTF-8')
+	options.addStringOption('charSet', 'UTF-8')
+}
+
 
