adding feature to specify and store the generated mnemonics to a file

--- a/src/main/resources/hmy-config.properties
+++ b/src/main/resources/hmy-config.properties
@@ -2,3 +2,4 @@ node=http://127.0.0.1:9500/
 keystore.dir=.hmy_java
 accounts.dir=accounts-keys
 passphrase=harmony-one
+mnemonics.file.path=mnemonics.txt
