--- a/build.gradle
+++ b/build.gradle
@@ -21,18 +21,18 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.web3j', name: 'core', version: '5.0.0'
-    compile group: 'org.web3j', name: 'abi', version: '5.0.0'
-    compile group: 'org.web3j', name: 'codegen', version: '5.0.0'
-    compile group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.5'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
-    compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    implementation group: 'org.web3j', name: 'core', version: '5.0.0'
+    implementation group: 'org.web3j', name: 'abi', version: '5.0.0'
+    implementation group: 'org.web3j', name: 'codegen', version: '5.0.0'
+    implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.5'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation group: 'com.google.guava', name: 'guava', version: '19.0'
 
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
-    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.4.2')
 }
 test {
     useJUnitPlatform()
